new school and blog pages

--- a/_site.yml
+++ b/_site.yml
@@ -12,3 +12,8 @@ navbar:
       href: index.html
     - text: "Publications"
       href: publications.html
+    - text: "Schools"
+      href: schools.html
+    - text: "Blog"
+      href: blog.html
+      
