--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,8 @@ navbar:
       href: publications.html
     - text: "Schools"
       href: schools.html
+    - text: "Events"
+      href: events.html
     - text: "Blog"
       href: blog.html
       
